--- a/index.html.haml
+++ b/index.html.haml
@@ -1,10 +1,13 @@
 !!! 5
 %html{:lang => 'en'}
   %head
-    %meta{:charset => 'utf-8'}
+    %meta{:charset => 'UTF-8'}
     %title Electronic Data Magnetics
     %link{:rel => 'stylesheet', :type => 'text/css', :media => 'screen, projector, print', :href => '/stylesheets/app.css'}
     /[if IE lt 9]
       %link{:rel => 'stylesheets', :type => 'text/css', :href => '/stylesheets/ie.css'}
   %body
-    %p This is a test
+    .container
+      .row
+        .eight.columns
+          %p This is a test
