reverted index back to the hacked centering solution while the pull request is getting sorted out on the gem

--- a/index.html.haml
+++ b/index.html.haml
@@ -12,7 +12,7 @@
       #content
         .row
           -#This is a centering hack, find a better solution!!!!!
-          .nine.columns.centered
+          .eight.columns.push-two
             %img{:src => 'images/wireframe/banner_728x210.gif'}
         .row
           %hr
