Added a class to shiv the paragraph classes down. This needs to be fixed, not complete at the moment

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -12,3 +12,12 @@
 
 // Project Styles
 //-----------------------------------------
+#content {
+  .row {
+    .six.columns {
+      p {
+        margin-top: 15px;
+      }
+    }
+  }
+}
