Added three dummy boxes to to the layout to structure the front page

--- a/index.html.haml
+++ b/index.html.haml
@@ -26,6 +26,13 @@
         .row
           %hr
         .row
+          .four.columns
+            %img{:src => '/Users/Griff/Dropbox/Design/Wireframin/banner_250x250.gif'}
+          .four.columns
+            %img{:src => '/Users/Griff/Dropbox/Design/Wireframin/banner_250x250.gif'}
+          .four.columns
+            %img{:src => '/Users/Griff/Dropbox/Design/Wireframin/banner_250x250.gif'}
+        .row
           .six.columns
             %p
               Electronic Data Magnetics, Inc. is a World Leader in the Mass Transit market. We offer both large and small agencies superior products and services. Our experience and personnel set EDM above the competition. Our customers include the New York City Transit Authority, the Chicago Transit Authority, the South Eastern Pennsylvania Transit Authority, Los Angeles Metro, Bay Area Rapid Transit Authority as well as many other major U.S. transit agencies
