Fast forwarding again. Overall the gem for zurb-foundation needs to be updated

--- a/_header.html.haml
+++ b/_header.html.haml
@@ -22,6 +22,15 @@
     %li
       %a{:href => '#aboutUs'}
         About Us
-    %li
+    %li.has-flyout
       %a{:href => '#contactUs'}
         Contact Us
+      .flyout.small
+        %a{:href => '#fax'}
+          Fax
+        %br/
+        %a{:href => '#phone'}
+          Phone
+        %br/
+        %a{:href => '#email'}
+          Email
