fast forward update to a new version of ZURB-foundation

--- a/_header.html.haml
+++ b/_header.html.haml
@@ -5,32 +5,32 @@
       Magnetics for Anyone
   %ul.nav-bar
     %li
-      %a{:href => '#home'}
+      %a{:href => '#home', :class => 'main'}
         Home
     %li
-      %a{:href => '#products'}
+      %a{:href => '#products', :class => 'main'}
         Products
     %li
-      %a{:href => '#industriesServed'}
+      %a{:href => '#industriesServed', :class => 'main'}
         Industries Served
     %li
-      %a{:href => '#qualityControl'}
+      %a{:href => '#qualityControl', :class => 'main'}
         Quality Control
     %li
-      %a{:href => 'designAndPrint'}
+      %a{:href => 'designAndPrint', :class => 'main'}
         Design & Print
     %li
-      %a{:href => '#aboutUs'}
+      %a{:href => '#aboutUs', :class => 'main'}
         About Us
     %li.has-flyout
-      %a{:href => '#contactUs'}
+      %a{:href => '#contactUs', :class => 'main'}
         Contact Us
       .flyout.small
-        %a{:href => '#fax'}
+        %a{:href => '#fax', :class => 'main'}
           Fax
         %br/
-        %a{:href => '#phone'}
+        %a{:href => '#phone', :class => 'main'}
           Phone
         %br/
-        %a{:href => '#email'}
+        %a{:href => '#email', :class => 'main'}
           Email
